--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^4.0.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
